<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">%1$s won\'t run unless you update the Android Wear app.</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="achievements_a1">CgkI-uKS-eYFEAIQAQ</string>
    <string name="achievements_a10">CgkI-uKS-eYFEAIQCg</string>
    <string name="achievements_a11">CgkI-uKS-eYFEAIQCw</string>
    <string name="achievements_a12">CgkI-uKS-eYFEAIQDA</string>
    <string name="achievements_a2">CgkI-uKS-eYFEAIQAg</string>
    <string name="achievements_a3">CgkI-uKS-eYFEAIQAw</string>
    <string name="achievements_a4">CgkI-uKS-eYFEAIQBA</string>
    <string name="achievements_a5">CgkI-uKS-eYFEAIQBQ</string>
    <string name="achievements_a6">CgkI-uKS-eYFEAIQBg</string>
    <string name="achievements_a7">CgkI-uKS-eYFEAIQBw</string>
    <string name="achievements_a8">CgkI-uKS-eYFEAIQCA</string>
    <string name="achievements_a9">CgkI-uKS-eYFEAIQCQ</string>
    <string name="action_settings">CASH! Authorised Persons Only.</string>
    <string name="app_id">199433171322</string>
    <string name="app_name">Homeless?</string>
    <string name="app_title">H O M E L E S S ?</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="back">‹ BACK</string>
    <string name="bank_close">Close Bank Account?</string>
    <string name="bank_d_1">Minimum amount to open\nan account is $100</string>
    <string name="bank_d_2">Invalid deposit transaction</string>
    <string name="bank_d_3">deposited Successfully</string>
    <string name="bank_deposit">Deposit</string>
    <string name="bank_info">Minimum amount to open an account is $100</string>
    <string name="bank_rate">Your acct. will earn 1% interest in</string>
    <string name="bank_w_1">Invalid withdrawal transaction</string>
    <string name="bank_w_2">withdrawn Successfully</string>
    <string name="bank_w_3">In situations where the submitted withdrawal amount takes your account balance below the $100 threshold for accounts, you will have to withdraw all funds and Close Your Bank Account. \n\n Do you want to withdraw $</string>
    <string name="bank_w_3b"> &amp; Close Bank Account?</string>
    <string name="bank_w_4">Your Bank Account is Closed</string>
    <string name="bank_withdrawal">Withdraw</string>
    <string name="banner_ad_unit_id">ca-app-pub-7998863643697390/7280852091</string>
    <string name="business_cj_1">Steal bicycle ·</string>
    <string name="business_cj_1p">$30</string>
    <string name="business_cj_2">Rob people ·</string>
    <string name="business_cj_2p">$75</string>
    <string name="business_cj_3">Steal car ·</string>
    <string name="business_cj_3p">$200</string>
    <string name="business_cj_4">Sell weed ·</string>
    <string name="business_cj_4p">$400</string>
    <string name="business_cj_5">Sell dope ·</string>
    <string name="business_cj_5p">$800</string>
    <string name="business_cj_6">Kidnap ·</string>
    <string name="business_cj_6p">$1200</string>
    <string name="business_cj_7">Terminate target ·</string>
    <string name="business_cj_7p">$1800</string>
    <string name="business_cj_8">Rob bank ·</string>
    <string name="business_cj_8p">$10000</string>
    <string name="business_image">Business</string>
    <string name="business_j_1">Beg ·</string>
    <string name="business_j_10">Supermarket owner ·</string>
    <string name="business_j_10p">$4000</string>
    <string name="business_j_11">Internet tycoon ·</string>
    <string name="business_j_11p">$10000</string>
    <string name="business_j_12">CEO of Positively Made ·</string>
    <string name="business_j_12p">$50000</string>
    <string name="business_j_1p">$1</string>
    <string name="business_j_2">Wash cars ·</string>
    <string name="business_j_2p">$5</string>
    <string name="business_j_3">Work at rumshop (bar) ·</string>
    <string name="business_j_3p">$20</string>
    <string name="business_j_4">Deliveryman ·</string>
    <string name="business_j_4p">$50</string>
    <string name="business_j_5">Taxi driver ·</string>
    <string name="business_j_5p">$100</string>
    <string name="business_j_6">Construction worker ·</string>
    <string name="business_j_6p">$150</string>
    <string name="business_j_7">Bank clerk ·</string>
    <string name="business_j_7p">$500</string>
    <string name="business_j_8">Office manager ·</string>
    <string name="business_j_8p">$800</string>
    <string name="business_j_9">Rumshop owner ·</string>
    <string name="business_j_9p">$2000</string>
    <string name="business_job_1">Jobs</string>
    <string name="business_job_2">Criminal Jobs</string>
    <string name="business_job_3">Central Bank</string>
    <string name="business_title">Business</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="d41">Basic mathematics</string>
    <string name="d42">Study at school</string>
    <string name="d43">Masonry training</string>
    <string name="d44">Study at college</string>
    <string name="d45">Study at university</string>
    <string name="d46">Novice - Weapon Skill</string>
    <string name="d47">Mobster - Weapon Skill</string>
    <string name="d48">Hitman - Weapon Skill</string>
    <string name="d49">Pickpocket - Thief Skill</string>
    <string name="d50">Junior Burglar - Thief Skill</string>
    <string name="d51">Master Thief - Thief Skill</string>
    <string name="d52">Driving license</string>
    <string name="d53">Liquor license</string>
    <string name="d54">Learn business</string>
    <string name="d55">Learn laws</string>
    <string name="d56">Learn accounting</string>
    <string name="d57">Learn management</string>
    <string name="decline">Decline</string>
    <string name="desc_logo_about">Positively Made Logo</string>
    <string name="developer">Developer\nPositively Made</string>
    <string name="development_1">Education</string>
    <string name="email_logo_about">homeless@positivelymade.com</string>
    <string name="hunger_bank">Bank Account ·</string>
    <string name="hunger_bank_amount">$0</string>
    <string name="hunger_cash">Cash ·</string>
    <string name="hunger_cash_amount">$0</string>
    <string name="link_logo_about">Our Google Play Apps</string>
    <string name="load">Load Game</string>
    <string name="pm_donate">Support App Development</string>
    <string name="rate">Rate App</string>
    <string name="save">Save Game</string>
    <string name="settings">Settings</string>
    <string name="share">Share App</string>
    <string name="text_logo_about">We are a web &amp; mobile development company with operations on the island paradise, Barbados. Our focus is creating unique, usable and aesthetically pleasing websites and mobile applications.</string>
    <string name="title_logo_about">Positively Made</string>
    <string name="tshirt">Buy T-shirt</string>
    <string name="unlock">Unlockables</string>
</resources>